--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/Johndusseau/liri-node-app#readme",
   "dependencies": {
     "dotenv": "^6.0.0",
+    "request": "^2.87.0",
     "twit": "^2.2.11"
   },
   "devDependencies": {}
